--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <!-- Pull in the compiled stylesheet. Harp will compile this automatically to css from scss -->
 <link rel="stylesheet" href="../css/main.css">
+
+
   </head>
 
   <body>
@@ -34,15 +36,15 @@
           Hello, I am Orlando Vazquez.
         </span></h3>
 			<p class="f3 measure-wide">
-					I live in Vancouver, British Columbia, Canada.
-			</p>
-			<p class="f3 measure-wide">
-					I am a software engineer and project lead at <a href="https://offworldsim.com">Offworld Defence Simulations</a>.
+					I am the Head of Engineering at <a href="https://offworldsim.com">Offworld Defence Simulations</a>.
 			</p>
 			<p class="f3 measure-wide">
 					I specialize in using <a href="https://unrealengine.com">Unreal
 					Engine</a> to create defence-oriented training, research and
 					simulation software.
+			</p>
+			<p class="f3 measure-wide">
+					I live in Vancouver, British Columbia, Canada.
 			</p>
       <ul class="f3">
 				<li><a href="https://github.com/orlandov">Github</a></li>
